# thalweg

./: .gitignore  CLAUDE.md  PLAN.md  README.md  pyproject.toml  spec.md
docs/superpowers/plans/: 2026-03-28-phase0-data-foundation.md
src/thalweg/: __init__.py  cli.py  config.py  storage.py
src/thalweg/analytics/: __init__.py  distributions.py  forecasts.py  pca.py  regimes.py  spreads.py
src/thalweg/fetchers/: __init__.py  base.py  boc.py  boe.py  ecb.py  overnight.py  ust.py
src/thalweg/web/: __init__.py  api.py  app.py
src/thalweg/web/static/css/: style.css
src/thalweg/web/static/js/: analytics.js  dashboard.js  explorer.js
src/thalweg/web/templates/: analytics.html  dashboard.html  explorer.html
tests/: conftest.py  test_analytics.py  test_api.py  test_boc.py  test_boe.py  test_distributions.py  test_ecb.py  test_forecasts.py  test_overnight.py  test_pca.py  test_rate_storage.py  test_regimes.py  test_storage.py  test_ust.py
tests/fixtures/: boc_benchmark_sample.json  boe_gilt_sample.csv  ecb_yc_sample.csv  sofr_sample.json  ust_csv_sample.csv  ust_xml_sample.xml
